creating generic forms with validations

--- a/src/index.css
+++ b/src/index.css
@@ -141,3 +141,8 @@
   height: 100px;
   animation: loader-circle-spin 0.7s linear infinite;
 }
+.form-error {
+  font-size: 13px;
+  color: red;
+  margin: 3px auto 0px 0px;
+}
