--- a/src/index.css
+++ b/src/index.css
@@ -160,3 +160,9 @@
   background-color: gray;
   cursor: not-allowed;
 }
+.basket-summary {
+  display: inline-block;
+  margin-left: 10px;
+  padding: 5px 10px;
+  border: white solid 2px;
+}
