--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,19 @@
   text-align: center;
   padding: 20px;
   font-size: large;
- }
- 
- .product-list {
+}
+
+.product-list {
   list-style: none;
   margin: 0;
   padding: 0;
- }
- 
- .product-list-item {
-  padding: 5px;
- }
+}
 
- .header {
+.product-list-item {
+  padding: 5px;
+}
+
+.header {
   text-align: center;
   background-color: #222;
   height: 160px;
@@ -165,4 +165,11 @@
   margin-left: 10px;
   padding: 5px 10px;
   border: white solid 2px;
+}
+.like-container {
+  margin-top: 20px;
+}
+
+.like-container button {
+  margin-top: 5px;
 }
